--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,52 @@ h1 {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-align: center;
   text-decoration: underline;
+  padding-top: 20px;
 }
 
 h2 {
   text-align: center;
   font-weight: 500;
+  text-decoration: underline;
+}
+.container {
+  max-width: 700px;
+  margin: 60px auto;
+  background-color: aliceblue;
+}
+
+.genre-selection {
+  display: block;
+  margin: 0px auto;
+  padding: 12px;
+  width: 500px;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.writing-pov {
+  margin-top: 50px;
+  text-align: center;
+  font-weight: bold;
+}
+.point-of-view {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  max-width: 500px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.submit {
+  text-align: center;
+  margin: 20px auto;
+}
+
+p {
+  margin-left: 100px;
 }
 
 footer {
